# GUMEVA_FINAL

./: README.md  pyproject.toml
app/: app.py  app2.py  app3.py
codigo/: API.ipynb  cuaderno_descarga.ipynb  mi_cuaderno.ipynb
my_api/: main.py  prueba.py
